CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(sdl2test)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

ADD_EXECUTABLE(sdl2test ../src/main.cpp ../src/sheet.cpp ../src/tile.cpp)

INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(sdl2test ${SDL2_LIBRARIES})
